<resources>
    <string name="app_name">PortonesInteligentes</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="volver">Volver</string>
    <string name="informaci_n">Información</string>
    <string name="estado_dinamico">Estado Dinamico</string>
    <string name="estado_del_port_n">Estado del portón</string>
    <string name="volverE">Volver</string>
    <string name="usuario">Usuario</string>
    <string name="login">Login</string>
    <string name="port_n_inteligente">Portón inteligente</string>
    <string name="log_out">Log Out</string>
    <string name="historial">Historial</string>
    <string name="estado">Estado</string>
    <string name="register">Register</string>
    <string name="nuevo_usuario">Nuevo usuario</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="volverR">Volver</string>
</resources>