<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:layout_editor_absoluteX="-73dp"
        tools:layout_editor_absoluteY="-75dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="46sp" />

        <EditText
            android:id="@+id/editTextNewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nuevo_usuario"
            android:minHeight="48dp"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nueva_contrase_a"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/buttonRegisterUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar" />

        <Button
            android:id="@+id/buttonVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volverR" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>